--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
-    <title>Hodl's Item List</title>
+    <title>swan_tv's Item List by Fr0sted</title>
     <script type="text/javascript">
         const itemListURL = "https://raw.githubusercontent.com/Fr0stedF1re/swanz_tv-s-item-list-by-Fr0sted/master/StoreItems.json";
         const eventListURL = "https://raw.githubusercontent.com/Fr0stedF1re/swanz_tv-s-item-list-by-Fr0sted/master/StoreEvents.json";
